[package]
name = "gsmutils"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["env", "derive"] }
google-cloud-secretmanager-v1 = "1.5.0"
tokio = { version = "1", features = ["full"] }
google-cloud-gax = "1.7.0"
eyre = "0.6.12"
async-channel = "2.5.0"
futures = "0.3.32"
